# StudyBot

./: .gitignore  main.py  pyproject.toml  rag_pipeline.py  youtube_downloader.py
ingest/: file_loader.py  video_loader.py
output/: chat_3658a4_25-04-2026_04-12-57.md
utils_io/: file_chooser.py  save.py
