[project]
name = "bot-rag"
version = "0.1.0"
description = "A local RAG pipeline to chat with your documents and YouTube videos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyragcore[all]>=0.1.4",
    "pymupdf>=1.27.2.2",
    "python-docx>=1.2.0",
    "pandas>=3.0.1",
    "yt-dlp>=2026.3.17",
    "openai-whisper>=20250625",
    "langid>=1.1.6",
    "torch",
    "torchvision"
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
name = "pytorch"
explicit = true

[tool.uv.sources]

torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[tool.setuptools.packages.find]
include = ["ingest*", "utils_io*"]